--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ body {
     box-sizing: border-box;
 }
 
+/* OK */
 header {
     width: 100%;
     height: 7vh;
@@ -20,25 +21,16 @@ header {
     left: 0px;
 }
 
+/* OK */
 header>img {
     width: 14%;
     height: 70%;
     margin-left: 6%;
 }
 
-main {
-    margin-top: 7vh;
-    margin-bottom: 25vh;
-    background-color: yellowgreen;
-    height: 68vh;
-    width: 100vw;
-
-    display: flex;
-
-}
-
-main .ilustracao {
-    width: 48vw;
+/* OK */
+.ilustracao {
+    width: 48%;
     height: 100%;
     background-color: #404eed;
 
@@ -47,45 +39,70 @@ main .ilustracao {
     justify-content: center;
 }
 
-main .ilustracao>img {
+/* OK */
+.ilustracao>img {
     width: 90%;
     height: 90%;
 }
 
-main .conteudo-esquerdo {
-    width: 60%;
+/* OK */
+main {
+    margin-top: 7vh;
+    margin-bottom: 25vh;
+    background-color: #e5e5e5;
+    height: 68vh;
+    width: 100vw;
+
+    display: flex;
+    flex-direction: row;
 }
 
-
-main .menu-opcoes {
-    width: 52vw;
+.menu {
+    box-sizing: border-box;
+    width: 52%;
     height: 100%;
-    background-color: #e5e5e5;
-    padding: 5% 8% 5% 8%;
+    background-color: slategrey;
+    padding-left: 5%;
+    padding-right: 5%;
+    padding-top: 0.5%;
+    padding-bottom: 0.5%;
 
     display: flex;
     flex-direction: column;
-    /* justify-content: center; */
-    /* align-items: center; */
+    justify-content: center;
 }
 
-.menu-opcoes h1 {
+.secao {
+    background-color: orange;
+    width: 100%;
+    height: 20%;
+    display: flex;
+    flex-direction: column;
+}
+
+.secao>h1 {
+    background-color: pink;
     font-size: 18px;
     font-weight: 400px;
     margin-bottom: 2px;
 }
 
 .opcoes {
-    margin-bottom: 10px;
+    background-color: aqua;
+    width: 100%;
+    height: 100%;
+    /* margin-bottom: 10px; */
     display: flex;
+    /* justify-content: space-between; */
 }
 
 .opcao {
-    width: 120px;
-    height: 120px;
-    margin-top: 5px;
-    margin-right: 20px;
-    /* background-color: #ffffff; */
+    width: 20%;
+    height: auto;
+    /* margin-top: 5px; */
+    /* margin-bottom: 5px; */
+    /* margin-right: 20px; */
+    background-color: #ffffff;
     border-radius: 9px;
 
     display: flex;
@@ -95,8 +112,8 @@ main .menu-opcoes {
 }
 
 .image {
-    width: 100px;
-    height: 100px;
+    width: 100%;
+    height: 100%;
     padding: 10%;
     border: 0.5px solid #c4c4c4;
     border-radius: 100px;
@@ -108,9 +125,19 @@ main .menu-opcoes {
     justify-content: center;
 }
 
+.opcoes>h2 {
+    margin-top: 5px;
+    font-size: 16px;
+    font-weight: 400;
+    overflow: visible;
+}
+
+
+
+
 .selecionado {
-    width: 100px;
-    height: 100px;
+    width: 65%;
+    height: 65%;
     padding: 10%;
     border: 3px solid #404eed;
     border-radius: 100px;
@@ -123,25 +150,14 @@ main .menu-opcoes {
 }
 
 .image>img {
-    height: 70px;
-    width: 80px;
+    width: 90%;
+    height: 85%;
 }
 
-.opcao>h2 {
-    /* width: 50px; */
-    margin-top: 5px;
-    font-size: 18px;
-    font-weight: 400;
-}
-
-.img-referencia>h1 {
-    font-size: 18px;
-    font-weight: 400;
-}
 
 .botao-desativado {
     height: 30px;
-    width: 70%;
+    width: auto;
     margin-top: 10px;
     color: #FCFCFC;
     background-color: #C4C4C4;
@@ -151,7 +167,7 @@ main .menu-opcoes {
 
 .botao-clicado {
     height: 30px;
-    width: 70%;
+    width: auto;
     margin-top: 10px;
     color: #FCFCFC;
     background-color: #404eed;
@@ -160,16 +176,66 @@ main .menu-opcoes {
 }
 
 .img-referencia>input {
-    width: 70%;
+    width: auto;
 }
 
 
 footer {
-    width: 100%;
+    width: 100vw;
     height: 25vh;
     background-color: gold;
+    padding-left: 5%;
 
     position: fixed;
     bottom: 0%;
     left: 0px;
+}
+
+footer>h1 {
+    /* margin-top: 5%; */
+    position: absolute;
+    top: 10%;
+    z-index: 5;
+    /* left: 5%; */
+}
+
+.ultimos-pedidos {
+    width: 90vw;
+    height: 65%;
+    background-color: chocolate;
+
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    overflow-x: scroll;
+
+    position: absolute;
+    top: 25%
+}
+
+.ultimos-pedidos::-webkit-scrollbar {
+    display: none;
+}
+
+.camisa-div {
+    background-color: aquamarine;
+    width: 8%;
+    height: 100%;
+    /* margin-right: 5%; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.camisa-div>img {
+    width: 70%;
+    height: 70%;
+    margin-bottom: 5%;
+}
+
+.camisa-div>h3 {
+    font-size: 16px;
+    font-weight: 400;
 }
