--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
 body {
-    background-color: red;
     font-family: "Roboto", sans-serif;
 }
 
@@ -7,7 +6,8 @@ body {
     box-sizing: border-box;
 }
 
-/* OK */
+/* CABEÇALHO */
+
 header {
     width: 100%;
     height: 7vh;
@@ -21,31 +21,14 @@ header {
     left: 0px;
 }
 
-/* OK */
 header>img {
     width: 14%;
     height: 70%;
     margin-left: 6%;
 }
 
-/* OK */
-.ilustracao {
-    width: 48%;
-    height: 100%;
-    background-color: #404eed;
+/* CONTEÚDO PRINCIPAL */
 
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-/* OK */
-.ilustracao>img {
-    width: 90%;
-    height: 90%;
-}
-
-/* OK */
 main {
     margin-top: 7vh;
     margin-bottom: 25vh;
@@ -57,52 +40,65 @@ main {
     flex-direction: row;
 }
 
-.menu {
-    box-sizing: border-box;
-    width: 52%;
+/* ILUSTRAÇÃO À DIREITA DA TELA */
+
+.ilustracao {
+    width: 48%;
     height: 100%;
-    background-color: slategrey;
-    padding-left: 5%;
-    padding-right: 5%;
-    padding-top: 0.5%;
-    padding-bottom: 0.5%;
+    background-color: #404eed;
 
     display: flex;
-    flex-direction: column;
+    align-items: center;
     justify-content: center;
 }
 
+.ilustracao>img {
+    width: 90%;
+    height: 90%;
+}
+
+/* MENU PARA MONTAGEM DAS BLUAS À ESQUERDA */
+
+.menu {
+    box-sizing: border-box;
+    width: 52vw;
+    height: 100%;
+    background-color: #e5e5e5;
+    padding-left: 10%;
+    padding-right: 10%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+
+    display: flex;
+    flex-direction: column;
+}
+
 .secao {
-    background-color: orange;
     width: 100%;
-    height: 20%;
+    height: 15%;
+    margin-bottom: 10%;
+
     display: flex;
     flex-direction: column;
 }
 
 .secao>h1 {
-    background-color: pink;
-    font-size: 18px;
+    font-size: 95%;
     font-weight: 400px;
-    margin-bottom: 2px;
+    margin-bottom: 1%;
 }
 
-.opcoes {
-    background-color: aqua;
+.secao>.opcoes {
     width: 100%;
-    height: 100%;
-    /* margin-bottom: 10px; */
+    height: 150%;
     display: flex;
-    /* justify-content: space-between; */
+    justify-content: space-between;
 }
 
 .opcao {
-    width: 20%;
-    height: auto;
-    /* margin-top: 5px; */
-    /* margin-bottom: 5px; */
-    /* margin-right: 20px; */
-    background-color: #ffffff;
+    width: 30%;
+    height: 80%;
+    margin-bottom: 5%;
     border-radius: 9px;
 
     display: flex;
@@ -111,38 +107,19 @@ main {
     align-items: center;
 }
 
+.opcao>h2 {
+    margin-top: 1%;
+    font-size: 80%;
+    font-weight: 400;
+}
+
 .image {
-    width: 100%;
-    height: 100%;
+    width: 60%;
+    height: 95%;
     padding: 10%;
+    background: linear-gradient(0, rgba(196, 196, 196, 1), rgba(242, 242, 242, 1));
     border: 0.5px solid #c4c4c4;
     border-radius: 100px;
-    background: linear-gradient(0deg, #C4C4C4, #C4C4C4),
-        linear-gradient(0deg, #F2F2F2, #F2F2F2);
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.opcoes>h2 {
-    margin-top: 5px;
-    font-size: 16px;
-    font-weight: 400;
-    overflow: visible;
-}
-
-
-
-
-.selecionado {
-    width: 65%;
-    height: 65%;
-    padding: 10%;
-    border: 3px solid #404eed;
-    border-radius: 100px;
-    background: linear-gradient(0deg, #C4C4C4, #C4C4C4),
-        linear-gradient(0deg, #F2F2F2, #F2F2F2);
 
     display: flex;
     align-items: center;
@@ -151,39 +128,74 @@ main {
 
 .image>img {
     width: 90%;
-    height: 85%;
+    height: 100%;
 }
 
+.selecionado {
+    width: 60%;
+    height: 95%;
+    padding: 10%;
+    border: 3px solid #404eed;
+    border-radius: 100px;
 
-.botao-desativado {
-    height: 30px;
-    width: auto;
-    margin-top: 10px;
-    color: #FCFCFC;
-    background-color: #C4C4C4;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+/* INPUT INSIRA O LINK */
+
+.img-referencia {
+    margin-top: 2%;
+    margin-bottom: 2%;
+}
+
+.img-referencia>h1 {
+    color: #232323;
+    font-size: 95%;
+    font-weight: 400px;
+    margin-bottom: 1%;
+}
+
+.img-referencia>input {
+    color: #818181;
+    padding-left: 2%;
+    width: 95%;
+    height: 65%;
+    background-color: #f2f2f2;
     border-radius: 10px;
     border: 0px solid #c4c4c4;
 }
 
+/* BOTÃO CONFIRMAR PEDIDO */
+
+.botao-desativado {
+    height: 110%;
+    width: 95%;
+    margin-top: 2%;
+    color: #FCFCFC;
+    background-color: #c4c4c4;
+    border-radius: 10px;
+    border: 0px solid #c4c4c4;
+
+}
+
 .botao-clicado {
-    height: 30px;
-    width: auto;
-    margin-top: 10px;
+    height: 110%;
+    width: 95%;
+    margin-top: 2%;
     color: #FCFCFC;
     background-color: #404eed;
     border-radius: 10px;
     border: 0px solid #404eed;
 }
 
-.img-referencia>input {
-    width: auto;
-}
-
+/* RODAPÉ */
 
 footer {
     width: 100vw;
     height: 25vh;
-    background-color: gold;
+    background-color: #f2f2f2;
     padding-left: 5%;
 
     position: fixed;
@@ -192,17 +204,14 @@ footer {
 }
 
 footer>h1 {
-    /* margin-top: 5%; */
     position: absolute;
     top: 10%;
     z-index: 5;
-    /* left: 5%; */
 }
 
 .ultimos-pedidos {
     width: 90vw;
     height: 65%;
-    background-color: chocolate;
 
     display: flex;
     flex-direction: row;
@@ -219,10 +228,9 @@ footer>h1 {
 }
 
 .camisa-div {
-    background-color: aquamarine;
+    background-color: #ffffff;
     width: 8%;
     height: 100%;
-    /* margin-right: 5%; */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -238,4 +246,5 @@ footer>h1 {
 .camisa-div>h3 {
     font-size: 16px;
     font-weight: 400;
+    word-wrap: break-word;
 }
